responsive aboutus, feature, services, gallery

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ M0,160L48,181.3C96,203,192,245,288,261.3C384,277,480,267,576,234.7C672,203,768,1
         </div>
         <div class="AboutImages col-lg-6 mt-lg-0 mt-md-5">
           <div class="row position-relative">
-            <div class="col-6">
+            <div class="AboutImages__big col-6">
               <img src="./img/a.jpg" alt="" class="radius-image img-fluid">
             </div>
             <div class="AboutImages__small col-6 mt-4">
@@ -227,14 +227,14 @@ M0,160L48,181.3C96,203,192,245,288,261.3C384,277,480,267,576,234.7C672,203,768,1
     <div class="container py-lg-5 py-md-4">
       <div class="row align-item-center">
         <div class="feature__left col-lg-6 pr-lg-5">
-          <span class="title-small mt-5">EVERY DAY BRINGS NEW CHALLENGES</span>
+          <span class="title-small">EVERY DAY BRINGS NEW CHALLENGES</span>
           <h3 class="title-big">Creative agency focused on vision, product and people</h3>
-          <p class="content mt-md-4">Aurabitur id gravida risus. Fusce eget ex fermentum, ultricies nisi ac sed, lacinia
+          <p class="content mt-md-4 mb-md-4">Aurabitur id gravida risus. Fusce eget ex fermentum, ultricies nisi ac sed, lacinia
             est. Quisque ut lectus consequat, venenatis eros et, sed commodo risus. Nullam sit amet laoreet elit.
             Suspendisse non init magnaa velit efficitur, dolor eget ex fermentum.</p>
           <button type="button" class="btn btn-success mt-lg-4">Discover More</button>
         </div>
-        <div class="feature__right col-lg-6">
+        <div class="feature__right col-lg-6 mb-md-5">
           <div class="feature__right__box d-grid">
             <div class="box-wrap">
               <div class="icon">
@@ -297,8 +297,8 @@ M0,160L48,181.3C96,203,192,245,288,261.3C384,277,480,267,576,234.7C672,203,768,1
   <section class="services">
     <div class="container py-lg-5 mb-5">
       <h3 class="title-big text-center mt-5">Always there for your care, our Services</h3>
-      <div class="services__content row mt-5 text-center">
-        <div class="col-lg-4">
+      <div class="services__content row mt-lg-5 mt-4 text-center justify-content-center">
+        <div class="col-lg-4 col-md-6">
           <div class="services__item">
             <a href="#url">
               <img src="./img/s1.jpg" alt="" class="img-fluid service-image">
@@ -316,7 +316,7 @@ M0,160L48,181.3C96,203,192,245,288,261.3C384,277,480,267,576,234.7C672,203,768,1
           </div>
 
         </div>
-        <div class="col-lg-4 mt-md-0 mt-5">
+        <div class="col-lg-4 col-md-6 mt-md-0 mt-5">
           <div class="services__item ">
             <a href="#url">
               <img src="./img/s2.jpg" alt="" class="img-fluid service-image">
@@ -334,7 +334,7 @@ M0,160L48,181.3C96,203,192,245,288,261.3C384,277,480,267,576,234.7C672,203,768,1
           </div>
 
         </div>
-        <div class="col-lg-4 mt-lg-0 mt-5">
+        <div class="col-lg-4 col-md-6 mt-lg-0 mt-5">
           <div class="services__item ">
             <a href="#url">
               <img src="./img/s3.jpg" alt="" class="img-fluid service-image">
